{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 740,
  "lineage": "bbc52e27-658c-d527-5cab-78e0b7d19b01",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "api-ip-172-31-43-193-k8s-local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:316744313301:loadbalancer/api-ip-172-31-43-193-k8s--s174bc",
            "availability_zones": [
              "ap-south-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": false,
            "dns_name": "api-ip-172-31-43-193-k8s--s174bc-131147495.ap-south-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 10,
                "target": "SSL:443",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "api-ip-172-31-43-193-k8s--s174bc",
            "idle_timeout": 300,
            "instances": [
              "i-08c5aac2b0bf76126"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 443,
                "instance_protocol": "tcp",
                "lb_port": 443,
                "lb_protocol": "tcp"
              }
            ],
            "name": "api-ip-172-31-43-193-k8s--s174bc",
            "security_groups": [
              "sg-075d7d242f5e37d67"
            ],
            "source_security_group": "316744313301/api-elb.ip-172-31-43-193.k8s.local",
            "source_security_group_id": "sg-075d7d242f5e37d67",
            "subnets": [
              "subnet-0e1103b3ecf58cf6a"
            ],
            "tags": {
              "KubernetesCluster": "ip-172-31-43-193.k8s.local",
              "Name": "api.ip-172-31-43-193.k8s.local",
              "kubernetes.io/cluster/ip-172-31-43-193.k8s.local": "owned"
            },
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.api-elb-ip-172-31-43-193-k8s-local",
            "aws_subnet.ap-south-1b-ip-172-31-43-193-k8s-local",
            "aws_vpc.ip-172-31-43-193-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ip-172-31-43-193-k8s-local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:316744313301:internet-gateway/igw-0c7cdbd962ff6eecf",
            "id": "igw-0c7cdbd962ff6eecf",
            "owner_id": "316744313301",
            "tags": {
              "KubernetesCluster": "ip-172-31-43-193.k8s.local",
              "Name": "ip-172-31-43-193.k8s.local",
              "kubernetes.io/cluster/ip-172-31-43-193.k8s.local": "owned"
            },
            "vpc_id": "vpc-0d49ad6b962f473ce"
          },
          "dependencies": [
            "aws_vpc.ip-172-31-43-193-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route-0-0-0-0--0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c7cdbd962ff6eecf",
            "id": "r-rtb-0a0a4d5b131a4f7ee1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a0a4d5b131a4f7ee",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ip-172-31-43-193-k8s-local",
            "aws_route_table.ip-172-31-43-193-k8s-local",
            "aws_vpc.ip-172-31-43-193-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ip-172-31-43-193-k8s-local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a0a4d5b131a4f7ee",
            "owner_id": "316744313301",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c7cdbd962ff6eecf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "KubernetesCluster": "ip-172-31-43-193.k8s.local",
              "Name": "ip-172-31-43-193.k8s.local",
              "kubernetes.io/cluster/ip-172-31-43-193.k8s.local": "owned",
              "kubernetes.io/kops/role": "public"
            },
            "vpc_id": "vpc-0d49ad6b962f473ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ip-172-31-43-193-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ap-south-1b-ip-172-31-43-193-k8s-local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc667ead9a714ccb",
            "route_table_id": "rtb-0a0a4d5b131a4f7ee",
            "subnet_id": "subnet-0e1103b3ecf58cf6a"
          },
          "dependencies": [
            "aws_route_table.ip-172-31-43-193-k8s-local",
            "aws_subnet.ap-south-1b-ip-172-31-43-193-k8s-local",
            "aws_vpc.ip-172-31-43-193-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api-elb-ip-172-31-43-193-k8s-local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:316744313301:security-group/sg-075d7d242f5e37d67",
            "description": "Security group for api ELB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-075d7d242f5e37d67",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 4
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "api-elb.ip-172-31-43-193.k8s.local",
            "name_prefix": "",
            "owner_id": "316744313301",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "ip-172-31-43-193.k8s.local",
              "Name": "api-elb.ip-172-31-43-193.k8s.local",
              "kubernetes.io/cluster/ip-172-31-43-193.k8s.local": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d49ad6b962f473ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ip-172-31-43-193-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "masters-ip-172-31-43-193-k8s-local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:316744313301:security-group/sg-0b5c2c301849a3258",
            "description": "Security group for masters",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b5c2c301849a3258",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07f7aedfbcbdb3112"
                ],
                "self": false,
                "to_port": 2379
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-07f7aedfbcbdb3112"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2382,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07f7aedfbcbdb3112"
                ],
                "self": false,
                "to_port": 4000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 4003,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07f7aedfbcbdb3112"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-075d7d242f5e37d67"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "masters.ip-172-31-43-193.k8s.local",
            "name_prefix": "",
            "owner_id": "316744313301",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "ip-172-31-43-193.k8s.local",
              "Name": "masters.ip-172-31-43-193.k8s.local",
              "kubernetes.io/cluster/ip-172-31-43-193.k8s.local": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d49ad6b962f473ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ip-172-31-43-193-k8s-local"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nodes-ip-172-31-43-193-k8s-local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:316744313301:security-group/sg-07f7aedfbcbdb3112",
            "description": "Security group for nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07f7aedfbcbdb3112",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0b5c2c301849a3258"
                ],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "nodes.ip-172-31-43-193.k8s.local",
            "name_prefix": "",
            "owner_id": "316744313301",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "ip-172-31-43-193.k8s.local",
              "Name": "nodes.ip-172-31-43-193.k8s.local",
              "kubernetes.io/cluster/ip-172-31-43-193.k8s.local": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d49ad6b962f473ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ip-172-31-43-193-k8s-local"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all-master-to-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 0,
            "id": "sgrule-578559782",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b5c2c301849a3258",
            "self": false,
            "source_security_group_id": "sg-0b5c2c301849a3258",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.masters-ip-172-31-43-193-k8s-local",
            "aws_vpc.ip-172-31-43-193-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all-master-to-node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2374681597",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-07f7aedfbcbdb3112",
            "self": false,
            "source_security_group_id": "sg-0b5c2c301849a3258",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.masters-ip-172-31-43-193-k8s-local",
            "aws_security_group.nodes-ip-172-31-43-193-k8s-local",
            "aws_vpc.ip-172-31-43-193-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all-node-to-node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2740767753",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-07f7aedfbcbdb3112",
            "self": false,
            "source_security_group_id": "sg-07f7aedfbcbdb3112",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nodes-ip-172-31-43-193-k8s-local",
            "aws_vpc.ip-172-31-43-193-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "api-elb-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2420355187",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-075d7d242f5e37d67",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api-elb-ip-172-31-43-193-k8s-local",
            "aws_vpc.ip-172-31-43-193-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "https-api-elb-0-0-0-0--0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-4141924020",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-075d7d242f5e37d67",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api-elb-ip-172-31-43-193-k8s-local",
            "aws_vpc.ip-172-31-43-193-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "https-elb-to-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 443,
            "id": "sgrule-2249626162",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b5c2c301849a3258",
            "self": false,
            "source_security_group_id": "sg-075d7d242f5e37d67",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api-elb-ip-172-31-43-193-k8s-local",
            "aws_security_group.masters-ip-172-31-43-193-k8s-local",
            "aws_vpc.ip-172-31-43-193-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "icmp-pmtu-api-elb-0-0-0-0--0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3,
            "id": "sgrule-811479010",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-075d7d242f5e37d67",
            "self": false,
            "source_security_group_id": null,
            "to_port": 4,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api-elb-ip-172-31-43-193-k8s-local",
            "aws_vpc.ip-172-31-43-193-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2789801392",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b5c2c301849a3258",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.masters-ip-172-31-43-193-k8s-local",
            "aws_vpc.ip-172-31-43-193-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-999432419",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-07f7aedfbcbdb3112",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nodes-ip-172-31-43-193-k8s-local",
            "aws_vpc.ip-172-31-43-193-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-to-master-tcp-1-2379",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 1,
            "id": "sgrule-1898082238",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b5c2c301849a3258",
            "self": false,
            "source_security_group_id": "sg-07f7aedfbcbdb3112",
            "to_port": 2379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.masters-ip-172-31-43-193-k8s-local",
            "aws_security_group.nodes-ip-172-31-43-193-k8s-local",
            "aws_vpc.ip-172-31-43-193-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-to-master-tcp-2382-4000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 2382,
            "id": "sgrule-3372474526",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b5c2c301849a3258",
            "self": false,
            "source_security_group_id": "sg-07f7aedfbcbdb3112",
            "to_port": 4000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.masters-ip-172-31-43-193-k8s-local",
            "aws_security_group.nodes-ip-172-31-43-193-k8s-local",
            "aws_vpc.ip-172-31-43-193-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-to-master-tcp-4003-65535",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 4003,
            "id": "sgrule-4152017121",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b5c2c301849a3258",
            "self": false,
            "source_security_group_id": "sg-07f7aedfbcbdb3112",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.masters-ip-172-31-43-193-k8s-local",
            "aws_security_group.nodes-ip-172-31-43-193-k8s-local",
            "aws_vpc.ip-172-31-43-193-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-to-master-udp-1-65535",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 1,
            "id": "sgrule-1371853974",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0b5c2c301849a3258",
            "self": false,
            "source_security_group_id": "sg-07f7aedfbcbdb3112",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.masters-ip-172-31-43-193-k8s-local",
            "aws_security_group.nodes-ip-172-31-43-193-k8s-local",
            "aws_vpc.ip-172-31-43-193-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh-external-to-master-0-0-0-0--0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2189063687",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b5c2c301849a3258",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.masters-ip-172-31-43-193-k8s-local",
            "aws_vpc.ip-172-31-43-193-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh-external-to-node-0-0-0-0--0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-167001167",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07f7aedfbcbdb3112",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nodes-ip-172-31-43-193-k8s-local",
            "aws_vpc.ip-172-31-43-193-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ap-south-1b-ip-172-31-43-193-k8s-local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:316744313301:subnet/subnet-0e1103b3ecf58cf6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.20.32.0/19",
            "id": "subnet-0e1103b3ecf58cf6a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "316744313301",
            "tags": {
              "KubernetesCluster": "ip-172-31-43-193.k8s.local",
              "Name": "ap-south-1b.ip-172-31-43-193.k8s.local",
              "SubnetType": "Public",
              "kubernetes.io/cluster/ip-172-31-43-193.k8s.local": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d49ad6b962f473ce"
          },
          "dependencies": [
            "aws_vpc.ip-172-31-43-193-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ip-172-31-43-193-k8s-local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:316744313301:vpc/vpc-0d49ad6b962f473ce",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-0d7b67caaff9a5ef1",
            "default_route_table_id": "rtb-030e16ef23fc95bd8",
            "default_security_group_id": "sg-00a3343e0bf2dafb1",
            "dhcp_options_id": "dopt-00fa22c06a716aa0b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d49ad6b962f473ce",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-030e16ef23fc95bd8",
            "owner_id": "316744313301",
            "tags": {
              "KubernetesCluster": "ip-172-31-43-193.k8s.local",
              "Name": "ip-172-31-43-193.k8s.local",
              "kubernetes.io/cluster/ip-172-31-43-193.k8s.local": "owned"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}